--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
-    "@vercel/node": "^2.10.3"
+    "@vercel/node": "^2.10.3",
+    "@zeit/ncc": "^0.22.3"
   }
 }
