--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "helmet": "^6.1.2",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@vercel/node": "^2.10.3",
