--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "This is a personal finance manager project",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": ">=14.17.0"
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
@@ -32,5 +35,8 @@
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "@vercel/node": "^2.10.3"
   }
 }
