--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/EgydioBNeto/finance#readme",
   "dependencies": {
+    "@vercel/node": "^2.10.3",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -32,8 +34,7 @@
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-    "yarn": "^1.22.19",
-    "@vercel/node": "^2.10.3"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@zeit/ncc": "^0.22.3"
